# birthdays_I_care_about

./: .gitignore  README.md  birthdays_I_care_about.py  mise.toml  pyproject.toml
