[project]
name = "birthdays-i-care-about"
version = "0.1.0"
description = "Script to automatically add birthday events to Google Calendar for selected contacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP"]
