[project]
name = "birthdays-i-care-about"
version = "0.1.0"
description = "Script to automatically add birthday events to Google Calendar for selected contacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "google-api-python-client-stubs",
    "google-auth-oauthlib-stubs",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
  "A", "ANN", "B", "C4", "DTZ", "E", "EXE", "F", "FA", "I", "ICN", "ISC", "LOG", "N",
  "PIE", "PLE", "PLW", "PT", "PYI", "Q", "RET", "RSE", "RUF", "SIM", "SLF", "SLOT", "TCH",
  "TID", "UP", "W", "YTT",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict = true
strict_concatenate = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "google_auth_oauthlib.*",
    "google_auth_oauthlib.flow",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "googleapiclient.discovery"
disable_error_code = ["attr-defined"]
